[package]
name = "espresso-types"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"

[features]
testing = []

[dependencies]
anyhow = { workspace = true }
ark-serialize = { workspace = true }
async-broadcast = { workspace = true }
async-trait = { workspace = true }
base64-bytes = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true }
cld = { workspace = true }
committable = { workspace = true }
contract-bindings = { path = "../contract-bindings" }
derive_more = { workspace = true }
diff-test-bn254 = { git = "https://github.com/EspressoSystems/solidity-bn254.git" }
ethers = { workspace = true }
fluent-asserter = "0.1.9"
futures = { workspace = true }
hotshot = { workspace = true }
hotshot-contract-adapter = { workspace = true }
hotshot-query-service = { workspace = true }
hotshot-types = { workspace = true }
itertools = { workspace = true }
jf-merkle-tree = { workspace = true }
jf-signature = { workspace = true }
jf-utils = { workspace = true }                                      # TODO temporary: used only for test_rng()
jf-vid = { workspace = true }
lru = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
reqwest = "0.12" # Same version used by ethers
sequencer-utils = { path = "../utils" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"                                                        # TODO temporary, used only for VID, should be set in hotshot
static_assertions = { workspace = true }
surf-disco = { workspace = true }
tagged-base64 = { workspace = true }
thiserror = { workspace = true }
tide-disco = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }

[dev-dependencies]
portpicker = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["base64_bytes", "hotshot_testing"]
