[package]
name = "sequencer-utils"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
ark-serialize = { workspace = true, features = ["derive"] }
async-compatibility-layer = { workspace = true }
async-std = { workspace = true }
clap = { workspace = true }
committable = "0.2"
contract-bindings = { path = "../contract-bindings" }
derive_more = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
hotshot-contract-adapter = { workspace = true }
log-panics = { workspace = true }
portpicker = { workspace = true }
serde = { workspace = true }
serde_json = "^1.0.124"
surf = "2.3.2"
tempfile = "3.9.0"
tracing = "0.1.37"
url = "2.3.1"
