[package]
name = "sequencer-utils"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = []

[dependencies]
anyhow = { workspace = true }
ark-serialize = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
clap = { workspace = true }
committable = "0.2"
contract-bindings = { path = "../contract-bindings" }
derive_more = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
hotshot-contract-adapter = { workspace = true }
log-panics = { workspace = true }
portpicker = { workspace = true }
# for price oracle and align with ethers-rs dep
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = "^1.0.113"
surf = "2.3.2"
tempfile = { workspace = true }
tracing = "0.1.37"
url = "2.3.1"
hotshot = { workspace = true }
tokio = { workspace = true }
