[package]
name = "vid"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = "MIT"

[dependencies]
anyhow = "1.0"
ark-bn254 = { workspace = true }
ark-ff = { workspace = true, features = [ "asm" ] }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
displaydoc = "0.2"
jf-crhf = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-crhf-v0.1.1" }
jf-merkle-tree = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-merkle-tree-v0.2.1" }
jf-poseidon2 = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-poseidon2-v0.1.0", features = ["bn254"] }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }
p3-maybe-rayon = "0.2"
serde = { workspace = true }
sha2 = { workspace = true }
sha3 = { version = "0.10" }
tagged-base64 = { workspace = true }

[dev-dependencies]
ark-bls12-381 = { version = "0.4.0" }
criterion = "0.5"
rand = "0.9.0"

[[bench]]
name = "dispersal"
harness = false

[[bench]]
name = "verify"
harness = false

[[bench]]
name = "recovery"
harness = false

[features]
default = ["parallel"]
parallel = ["ark-ff/parallel", "jf-utils/parallel", "p3-maybe-rayon/parallel"]
print-trace = ["ark-std/print-trace"]
sha256 = []
keccak256 = []
