[package]
name = "hotshot_contract"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1", features = [
    "logging-utils",
] }
async-std = "1.12.0"
clap = { version = "^4.4", features = ["derive"] }
contract-bindings = { path = "../../contract-bindings" }
crs = { git = "https://github.com/alxiong/crs" }
digest = { version = "0.10", default-features = false, features = ["alloc"] }
ethers = { version = "2.0.4" }
ethers-providers = "2.0.4"
ethers-solc = "2.0.4"
hex = "0.4.3"
itertools = "0.10.3"
jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish", features = ["test-apis", "test-srs"], rev = "8c66b70c5dae00ceb4d1c32fc3a0ab603d1681cb" }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", features = ["std"], rev = "8c66b70c5dae00ceb4d1c32fc3a0ab603d1681cb" }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish", features = ["std"], rev = "8c66b70c5dae00ceb4d1c32fc3a0ab603d1681cb" }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", rev = "8c66b70c5dae00ceb4d1c32fc3a0ab603d1681cb" }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
sequencer-utils = { path = "../../utils" }
sha3 = { version = "0.10.8", default-features = false }

[[bin]]
name = "diff-test"
path = "src/bin/diff_test.rs"
