[package]
name = "hotshot_contract"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ed-on-bn254 = "0.4.0"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1", features = [
    "logging-utils",
] }
async-std = "1.12.0"
async-trait = "0.1.74"
clap = { version = "^4.4", features = ["derive"] }
contract-bindings = { path = "../../contract-bindings" }
crs = { git = "https://github.com/alxiong/crs", rev = "4f320d819514a50138dd114440b3b3e30e83a081" }
digest = { version = "0.10", default-features = false, features = ["alloc"] }
ethers = { version = "2.0.4" }
ethers-providers = "2.0.4"
ethers-solc = "2.0.4"
hex = "0.4.3"
hotshot-state-prover = { git = "https://github.com/EspressoSystems/HotShot.git", rev = "0dde152df0af0c799f906ea14a2b59ade98b6d18" }
itertools = "0.10.3"
jf-plonk = { workspace = true }
jf-primitives = { workspace = true }
jf-relation = { workspace = true }
jf-utils = { workspace = true }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
sequencer-utils = { path = "../../utils" }
sha3 = { version = "0.10.8", default-features = false }

[[bin]]
name = "diff-test"
path = "src/bin/diff_test.rs"

[[bin]]
name = "gen-vk-contract"
path = "src/bin/gen_vk_contract.rs"
