[package]
name = "hotshot-fakeapi"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
hotshot-example-types = { workspace = true }
hotshot-types = { workspace = true }
rand = { workspace = true }
tide-disco = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
vbs = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
